# PicoCALC-CALC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  font_terminus.c  lv_conf.h  lv_port_disp_picocalc_ILI9488.c  lv_port_indev_picocalc_kb.c  main.c  main.h  utils.c  utils.h
i2ckbd/: i2ckbd.c  i2ckbd.h
lcdspi/: lcdspi.c  lcdspi.h
lcdspi/fonts/: font1.h
lib/lvgl/: CMakeLists.txt
